--- a/TCC/AppShell.xaml
+++ b/TCC/AppShell.xaml
@@ -9,7 +9,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate local:App}"
         Route="MainPage" />
 
 </Shell>
