--- a/TCC/Views/ChoicePage.xaml
+++ b/TCC/Views/ChoicePage.xaml
@@ -1,56 +1,49 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TCC.Views.Home"
-             Title="Home"
-             BackgroundColor="#FF0000">
+             x:Class="TCC.Views.ChoicePage"
+             Title="ChoicePage"
+             BackgroundColor="Red">
 
     <VerticalStackLayout Spacing="40"
-                         Padding="30"
-                         VerticalOptions="Center"
-                         HorizontalOptions="Center">
-
-        <!-- Texto de Boas-vindas -->
-        <Label Text="Bem-vindo!"
-               FontSize="32"
-               FontAttributes="Bold"
-               TextColor="White"
-               HorizontalOptions="Center" />
+                     Padding="30"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center">
 
         <!-- Botões -->
         <VerticalStackLayout Spacing="20" WidthRequest="250">
 
-            <Button x:Name="registerButton"
-                Text="Criar conta"
+            <Button x:Name="driverButton"
+                    Text="Sou motorista"
                     TextColor="Black"
                     FontAttributes="Bold"
                     BackgroundColor="White"
                     CornerRadius="30"
                     HeightRequest="55"
                     SemanticProperties.Hint="Entrar como motorista"
-                    Clicked="registerButton_Clicked">
+                    Clicked="driverButton_Clicked">
                 <Button.ImageSource>
                     <FontImageSource Glyph="➔"
-                                     Size="20"
-                                     Color="Red"
-                                     FontFamily="Arial" />
+                                 Size="20"
+                                 Color="Red"
+                                 FontFamily="Arial" />
                 </Button.ImageSource>
             </Button>
 
-            <Button x:Name="loginButton"
-                    Text="Login"
+            <Button x:Name="passengerButton"
+                    Text="Sou passageiro"
                     TextColor="Black"
                     FontAttributes="Bold"
                     BackgroundColor="White"
                     CornerRadius="30"
                     HeightRequest="55"
                     SemanticProperties.Hint="Entrar como passageiro"
-                    Clicked="loginButton_Clicked">
+                    Clicked="passengerButton_Clicked">
                 <Button.ImageSource>
                     <FontImageSource Glyph="➔"
-                                     Size="20"
-                                     Color="Red"
-                                     FontFamily="Arial" />
+                                 Size="20"
+                                 Color="Red"
+                                 FontFamily="Arial" />
                 </Button.ImageSource>
             </Button>
 
